--- a/.cargo/config
+++ b/.cargo/config
@@ -1,4 +1,4 @@
-[build]
+[target.x86_64-unknown-linux-gnu]
 rustflags = ["-C",
              "target-feature=+aes,+ssse3,+sse4.1,+sse4.2,+avx",
              "-C",
