feat(asuran-core): Runtime feature detection for AESNI
Depend directly on aes-soft and ctr, instead of aes and aes-ctr. Additionally make aesni a platform
specific dependency on x86 and x86_64.
Move aes encryption/decryption into a shim module that, on x86, uses runtime feature detection to
decide between aes-soft and aesni.

Closes #68

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,10 @@ overflow-checks = false
 [profile.dev.package.rust-argon2]
 opt-level = 3
 overflow-checks = false
-[profile.dev.package.aes]
+[profile.dev.package.aes-soft]
 opt-level = 3
 overflow-checks = false
-[profile.dev.package.aes-ctr]
+[profile.dev.package.ctr]
 opt-level = 3
 overflow-checks = false
 [profile.dev.package.blake2b_simd]
