ci: Reset RUSTFLAGS for tarpaulin task
The RUSTFLAGS were recently updated to strip the resulting binaries, which breaks tarpaulin.
Reset the RUSTFLAGS env variable to correct for this.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,10 @@ test:coverage:
   stage: coverage
   image: "xd009642/tarpaulin"
   script:
+    - export RUSTFLAGS=""
     - apt-get update
     - apt-get install curl git -y
+    - env
     - cargo tarpaulin --out Xml -t 600 --ignore-tests --force-clean --output-dir tarp
   after_script:
     - bash <(curl -s https://codecov.io/bash) -f tarp/cobertura.xml
