--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -38,14 +38,14 @@ base64 = "0.12.1"
 bincode = "1.2.1"
 byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
-crossbeam = { version = "0.7.3", default-features = false, features = ["crossbeam-channel"] }
-dashmap = "3.11.2"
+crossbeam-channel = "0.4.2"
+dashmap = "3.11.3"
 futures = { version = "0.3.5", default-features = false, features = ["std"] }
 lazy_static = "1.4.0"
 lru = { version = "0.5.0", default-features = false }
 num_cpus = "1.13.0"
 petgraph = { version = "0.5.1", default-features = false }
-piper = "0.1.2"
+piper = "0.1.3"
 rand = "0.7.3"
 rmp-serde = "0.14.3"
 semver = "0.10.0"
