perf: Restore codegen-units=1
This turned out to be too big of a perf hit. Reverting.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ members = [
 ]
 
 [profile.bench]
+codegen-units=1
 lto = true
 
 [profile.release]
+codegen-units=1
 lto = true
 
 # Improve test speeds by optimizing some extra slow things
