--- a/ci/linux.yml
+++ b/ci/linux.yml
@@ -1,6 +1,6 @@
 test:linux:
   stage: test
-  image: "thatonelutenist/rustc-sccache:latest"
+  image: "registry.gitlab.com/asuran-rs/rust-sccache-docker:latest"
   script:
     - rustc --version
     - cargo --version
@@ -9,7 +9,7 @@ test:linux:
     - linux
   needs: []
   services:
-    - name: atmoz/sftp:latest
+    - name: registry.gitlab.com/asuran-rs/sftp-docker:latest
       alias: sftp
       command:
         - "asuran:asuran:::asuran"
@@ -22,7 +22,7 @@ test:linux:
 
 build:linux:
   stage: build
-  image: "thatonelutenist/rustc-sccache:latest"
+  image: "registry.gitlab.com/asuran-rs/rust-sccache-docker:latest"
   script:
     - cargo build --release
     - cp target/release/asuran-cli ./asuran-cli-linux-x64
