--- a/ci/linux.yml
+++ b/ci/linux.yml
@@ -37,5 +37,5 @@ build:linux:
   needs: []
   dependencies: []
   variables:
-    - RUSTFLAGS: "-C target-cpu=sandybridge"
+    RUSTFLAGS: "-C target-cpu=sandybridge"
 
