--- a/ci/windows.yml
+++ b/ci/windows.yml
@@ -28,4 +28,4 @@ build:windows:
   needs: []
   dependencies: []
   variables:
-    - RUSTFLAGS: "-C target-cpu=sandybridge"
+    RUSTFLAGS: "-C target-cpu=sandybridge"
