--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -48,10 +48,10 @@ num_cpus = "1.13.0"
 petgraph = { version = "0.5.1", default-features = false }
 piper = "0.1.3"
 rand = "0.7.3"
-rmp-serde = "0.14.3"
 semver = "0.10.0"
 serde = { version = "1.0.111", features = ["derive"] }
 serde_bytes = "0.11.4"
+serde_cbor = "0.11.1"
 smol = "0.1.10"
 ssh2 = { version = "0.8.1", optional = true }
 thiserror = "1.0.19"
