--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -31,20 +31,17 @@ blake3-neon = ["asuran/blake3-neon"]
 [dependencies]
 anyhow = "1.0.31"
 asuran = { version = "= 0.1.6-alpha.1", path = "../asuran", default-features = false }
-async-trait = "0.1.35"
+async-channel = "1.1.0"
+async-trait = "0.1.36"
 chrono = "0.4.11"
-clap = { version = "2.33.1", features = ["yaml"] }
-futures = "0.3.5"
+clap = { version = "2.33.1"}
+futures = { version = "0.3.5", default-features = false }
 globset = "0.4.5"
 num_cpus = "1.13.0"
-piper = "0.1.3"
-prettytable-rs = "0.8.0"
-read_input = "0.8.4"
-rpassword = "4.0.5"
-smol = "0.1.11"
-structopt = "0.3.14"
+prettytable-rs = { version = "0.8.0", default-features = false }
+smol = "0.1.17"
+structopt = "0.3.15"
 tracing = "0.1.15"
-tracing-subscriber = "0.2.5"
 
 [build-dependencies]
 vergen = "3.1.0"
