--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -34,8 +34,10 @@ blake3-neon = ["asuran-core/blake3-neon"]
 [dependencies]
 asuran-chunker = { version = "= 0.1.6-alpha.1", path = "../asuran-chunker/", features = ["streams"] }
 asuran-core = { version = "= 0.1.6-alpha.1", path = "../asuran-core/", default-features = false }
-async-trait = "0.1.35"
-base64 = "0.12.1"
+async-channel = "1.1.0"
+async-lock = "1.1.2"
+async-trait = "0.1.36"
+base64 = "0.12.2"
 bincode = "1.2.1"
 byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
@@ -43,18 +45,17 @@ crossbeam-channel = "0.4.2"
 dashmap = "3.11.4"
 futures = { version = "0.3.5", default-features = false, features = ["std"] }
 lazy_static = "1.4.0"
-lru = { version = "0.5.1", default-features = false }
+lru = { version = "0.5.2", default-features = false }
 num_cpus = "1.13.0"
 petgraph = { version = "0.5.1", default-features = false }
-piper = "0.1.3"
 rand = "0.7.3"
 semver = "0.10.0"
-serde = { version = "1.0.111", features = ["derive"] }
-serde_bytes = "0.11.4"
+serde = { version = "1.0.113", features = ["derive"] }
+serde_bytes = "0.11.5"
 serde_cbor = "0.11.1"
-smol = "0.1.11"
+smol = "0.1.17"
 ssh2 = { version = "0.8.1", optional = true }
-thiserror = "1.0.19"
+thiserror = "1.0.20"
 tracing = "0.1.15"
 tracing-futures = "0.2.4"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
@@ -64,7 +65,6 @@ zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
 [dev-dependencies]
 criterion = "0.3.2"
 dir-diff = "0.3.2"
-futures-await-test = "0.3.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 tempfile = "3.1.0"
